content moderator implementado
