# Event+/webapi.event+/Controllers/ComentariosEventoController.cs
@@ -73,12 +73,12 @@ namespace webapi.event_.Controllers
         }
 
 
-        [HttpGet("ListarSomenteExibe")]
-        public IActionResult GetShow()
+        [HttpGet("ListarSomenteExibe{id}")]
+        public IActionResult GetShow(Guid id)
         {
             try
             {
-                return Ok(comentario.ListarSomenteExibe());
+                return Ok(comentario.ListarSomenteExibe(id));
             }
 
             catch (Exception e)
