# Event+/webapi.event+/Repositories/EventoRepository.cs
@@ -131,5 +131,18 @@ namespace webapi.event_.Repositories
                 throw;
             }
         }
+
+        public List<Evento> ListarAnteriores()
+        {
+            try
+            {
+                return _context.Evento
+                    .Where(e => e.DataEvento < DateTime.Now).ToList();
+            }
+            catch (Exception)
+            {
+                throw;
+            }
+        }
     }
 }
